package Enums;

public enum FormaDePago {
    CHEQUE,DEBITO_AUTOMATICO,EFECTIVO,TRANSFERENCIA;
}
