package Enums;

public enum TipoCobertura {
    TOTAL,CONTRATERCEROS,PERSONAL; 
}
