package Enums;

public enum TipoVehiculo {
    AUTO,CAMION,CAMIONETA,MOTO;
}
